<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="android.text.TextUtils"/>
        <import type="android.view.View"/>
        <variable
            name="signUpModel"
            type="com.kotlin.ytpractice.onboarding.BindingData" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/onboarding_bg"
        >

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/startMargin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp"
            />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/endMargin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="20dp"
            />

        <ImageView
            android:id="@+id/onBoardingBanner"
            android:layout_width="900dp"
            android:layout_height="wrap_content"
            android:src="@drawable/subtract"
            android:rotation="155"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/manageMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manage"
            android:layout_marginTop="130dp"
            android:textSize="48sp"
            android:textColor="@color/white"
            android:fontFamily="@font/heebo_light"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintTop_toBottomOf="@+id/onBoardingBanner"
            app:layout_constraintStart_toStartOf="@id/startMargin"
            app:layout_constraintEnd_toEndOf="@id/endMargin"
            />
        <TextView
            android:id="@+id/housingMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/housing"
            android:textSize="48sp"
            android:fontFamily="@font/heebo_semibold"
            android:textColor="@color/secondaryLight"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintTop_toBottomOf="@+id/manageMsg"
            app:layout_constraintStart_toStartOf="@id/startMargin"
            />
        <TextView
            android:id="@+id/spaceMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spaces"
            android:textSize="48sp"
            android:textColor="@color/white"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/heebo_light"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintTop_toBottomOf="@+id/manageMsg"
            app:layout_constraintStart_toEndOf="@id/housingMsg"
            />
        <TextView
            android:id="@+id/hintMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/on_board_hint"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/heebo_light"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintTop_toBottomOf="@+id/spaceMsg"
            app:layout_constraintStart_toStartOf="@id/startMargin"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/joinNowBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/PrimaryButton"
            android:text="@string/join_now"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toTopOf="@+id/alreadyHaveAct"
            app:layout_constraintStart_toStartOf="@id/startMargin"
            app:layout_constraintEnd_toEndOf="@id/endMargin"
            />

        <View
            android:id="@+id/alreadyHaveAct"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/startMargin"
            app:layout_constraintEnd_toEndOf="@id/endMargin"
            />

        <TextView
            android:id="@+id/alreadyHaveAnAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_account"
            android:textColor="@color/white"
            android:fontFamily="@font/heebo_regular"
            app:layout_constraintBottom_toBottomOf="@id/alreadyHaveAct"
            app:layout_constraintStart_toStartOf="@id/alreadyHaveAct"
            app:layout_constraintTop_toTopOf="@+id/alreadyHaveAct"
            app:layout_constraintEnd_toEndOf="@id/alreadyHaveAct"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>